Closed Bug 1435730 Opened 8 years ago Closed 8 years ago

[TSF][TS_E_NOLAYOUT] Candidate window of Japanist 10 positioned incorrectly and flicked (not aware of TS_E_NOLAYOUT issue)

Categories

(Core :: Widget: Win32, defect)

All
Windows
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla60
Tracking Status
firefox58 --- wontfix
firefox59 --- wontfix
firefox60 --- fixed

People

(Reporter: masayuki, Assigned: masayuki)

Details

(Keywords: inputmethod)

Attachments

(2 files)

Japanist 10 is a new Japanese TIP. However, this is not aware of TS_E_NOLAYOUT issue. Therefore, when we return TS_E_NOLAYOUT from ITextStoreACP::GetTextExt(), it shows candidate window at wrong point or reposition it when we notify it of layout change. So, we need to add some hack for it too.
Comment on attachment 8948912 [details] Bug 1435730 - part 1: Make TSFTextStore::GetTextExt() not return TS_E_NOLAYOUT error to Japanist 10 when the range is in composition string https://reviewboard.mozilla.org/r/218322/#review224092
Attachment #8948912 - Flags: review?(m_kato) → review+
Comment on attachment 8948913 [details] Bug 1435730 - part 2: TSFTextStore::GetTextExt() shouldn't adjust acpStart to start of composition string if ContentCacheInParent perhaps has some character rects in composition string https://reviewboard.mozilla.org/r/218324/#review224102
Attachment #8948913 - Flags: review?(m_kato) → review+
Pushed by masayuki@d-toybox.com: https://hg.mozilla.org/integration/autoland/rev/39ecbb5103c1 part 1: Make TSFTextStore::GetTextExt() not return TS_E_NOLAYOUT error to Japanist 10 when the range is in composition string r=m_kato https://hg.mozilla.org/integration/autoland/rev/5785602f6ff4 part 2: TSFTextStore::GetTextExt() shouldn't adjust acpStart to start of composition string if ContentCacheInParent perhaps has some character rects in composition string r=m_kato
Status: ASSIGNED → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla60
We have not had this bug report from actual Japanist 10 users yet. I think that number of Japanist 10 users in our users is really small. Additionally, the part 2 patch may affect to other IMEs. I've tested Nightly with various Japanese IMEs for 2 days, but don't have enough time to test Chinese IMEs. So, perhaps, we shouldn't uplift these patches since they'll be fixed by the next ESR.
Summary: [TSF] Candidate window of Japanist 10 positioned incorrectly and flicked (not aware of TS_E_NOLAYOUT issue) → [TSF][TS_E_NOLAYOUT] Candidate window of Japanist 10 positioned incorrectly and flicked (not aware of TS_E_NOLAYOUT issue)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: